css/queries.css
/* In media queries, rem & em does not depend on the font-size defined on html element.
Instead it is equal to browser's font size.
1rem = 1em = 16px 

Use em in media queries because of consistent behavior*/

/***************************************/
/* Below 1344px (small desktops) */
/***************************************/

@media (max-width: 84em) {
  .hero {
    max-width: 120rem;
  }

  .heading-primary {
    font-size: 4.4rem;
  }

  .gallery {
    grid-template-columns: repeat(2, 1fr);
  }

  .gallery figure:nth-child(n + 9) {
    display: none;
  }
}

/***************************************/
/* Below 1200px (Landscape tablet) */
/***************************************/
@media (max-width: 75em) {
  html {
    /* make 1rem = 9px */
    font-size: 56.25%;
  }

  .grid {
    column-gap: 4.8rem;
    row-gap: 6.4rem;
  }

  .heading-secondary {
    font-size: 3.6rem;
  }

  .heading-tertiary {
    font-size: 2.4rem;
  }

  .header {
    padding: 0 3.2rem;
  }

  .main-nav-list {
    gap: 3.2rem;
  }

  .hero {
    gap: 4.8rem;
  }

  .testimonials-container {
    padding: 9.6rem 3.2rem;
  }
}

/***************************************/
/* Below 944px (Tablet) */
/***************************************/

@media (max-width: 59em) {
  html {
    font-size: 50%;
  }

  .hero {
    grid-template-columns: 1fr;
    padding: 0 8rem;
    gap: 6.4rem;
  }

  .hero-text-box,
  .hero-img-box {
    text-align: center;
  }

  .hero-img {
    width: 60%;
  }

  .delivered-meals {
    justify-content: center;
    margin-top: 3.2rem;
  }

  .featured-logos img {
    height: 2.4rem;
  }

  .step-number {
    font-size: 7.4rem;
  }

  .meal-content {
    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
  }

  .gallery figure:nth-child(n + 9) {
    display: unset;
  }

  .section-testimonials {
    grid-template-columns: 1fr;
  }

  .gallery {
    grid-template-columns: repeat(6, 1fr);
  }

  .cta {
    grid-template-columns: 3fr 2fr;
  }

  .cta-form {
    grid-template-columns: 1fr;
  }

  .btn--form {
    margin-top: 1.2rem;
  }

  /* Navigation */

  .btn-mobile-nav {
    display: block;
    z-index: 9999;
  }

  .header {
    position: relative;
  }

  .main-nav {
    background-color: #fff;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 0.5s ease-in;

    /* Hide the Nav without using display: none */
    /* 1. Hide visually */
    opacity: 0;
    /* 2. Disable mouse and keyboard events */
    pointer-events: none;
    /* 3. Hide from Screen readers */
    visibility: hidden;

    /* Move it to right side of screen */
    transform: translateX(100%);
  }

  .nav-open .main-nav {
    opacity: 1;
    pointer-events: auto;
    visibility: visible;

    transform: translateX(0);
  }

  .nav-open .icon-mobile-nav[name='close-outline'] {
    display: block;
  }

  .nav-open .icon-mobile-nav[name='menu-outline'] {
    display: none;
  }

  .main-nav-list {
    display: flex;
    flex-direction: column;
    gap: 4.8rem;
  }

  .main-nav-link:link,
  .mainin-nav-link:visited {
    font-size: 3rem;
  }
}

/***************************************/
/* Below 704px (Smaller Tablets) */
/***************************************/

@media (max-width: 44em) {
  .grid--3-cols,
  .grid--4-cols {
    grid-template-columns: 1fr 1fr;
  }

  .diets {
    grid-column: 1/-1;
    justify-self: center;
  }

  .pricing-plan {
    width: 100%;
  }

  .heading-secondary {
    margin-bottom: 4.8rem;
  }

  .grid--footer {
    grid-template-columns: repeat(6, 1fr);
  }

  .nav-col {
    grid-row: 1;
    grid-column: span 2;
    margin-bottom: 3.2rem;
  }

  .logo-col,
  .address-col {
    grid-column: span 3;
  }
}

/***************************************/
/* Below 544px (Phones) */
/***************************************/

@media (max-width: 34em) {
  .grid {
    row-gap: 4.8rem;
  }

  .grid--2-cols,
  .grid--3-cols,
  .grid--4-cols,
  .testimonials,
  .cta {
    grid-template-columns: 1fr;
  }

  .section-hero {
    padding: 2.4rem 0 6.4rem 0;
  }

  .hero {
    padding: 0 3.2rem;
  }

  .btn,
  .btn:link,
  .btn:visited {
    padding: 2.4rem 1.6rem;
  }

  .hero-img {
    width: 80%;
  }

  .featured-logos img {
    height: 1.2rem;
  }

  .step-img-box:nth-child(2) {
    grid-row: 1;
  }

  .step-img-box:nth-child(6) {
    grid-row: 5;
  }

  .step-img-box {
    transform: translateY(2.4rem);
  }

  .gallery {
    grid-template-columns: repeat(4, 1fr);
    gap: 1.2rem;
  }

  .cta-img-box {
    height: 32rem;
    grid-row: 1;
  }

  .cta-text-box {
    padding: 3.2rem;
  }

  .grid--footer {
    column-gap: 3.2rem;
  }
}

